--- a/index.html
+++ b/index.html
@@ -24,10 +24,19 @@
 
 <body>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
-
-
-</body>
-
+  <h1>All About Iguanas!</h1>
+  <img src="img/110922-Center-1.jpeg">
+  <h2>They hate the cold</h2>
+  <p>Take a look at the habitats that green iguanas thrive in: Central America, South America, Caribbean islands, and now South Florida. What do these places have in common?
+    They are very, very warm and enjoy sunny days year-round. Iguanas need high temperatures to survive. That’s why iguana populations are not very large in central and northern Florida. It just doesn’t get hot enough.
+    In the Miami area, as well as in the Keys, the weather is perfect for iguanas. They also need direct sunlight in order to survive. That is why you often find them out basking in the sun.</p>
+  <img src="img/Green-Iguana-Feature.jpg" >
+  <h2>They can swim</h2>
+  <p>Iguanas are reptiles which means they do very well in water. They are excellent swimmers.
+    They can swim in both saltwater and freshwater. And if the water temperature is right, they can hold their breath for up to 15 minutes.</p>
+  <img src="img/iguana-IIGU-Hollywood-1d-600x400.jpg">
+  <h2>What does iguana eat?</h2>
+  <p>Iguanas are herbivorous, meaning they eat plants; specifically, they are folivores, meaning they eat leaves. In the wild, iguanas feed almost entirely on the leaves of trees and vines, plus some fruits and flowers.
+  </p>
+  <img src="img/unnamed.jpg">
 </html>
