--- a/index.html
+++ b/index.html
@@ -39,4 +39,23 @@
   <p>Iguanas are herbivorous, meaning they eat plants; specifically, they are folivores, meaning they eat leaves. In the wild, iguanas feed almost entirely on the leaves of trees and vines, plus some fruits and flowers.
   </p>
   <img src="img/unnamed.jpg">
+  <h2>How often does an iguana eat?</h2>
+  <p>Hatchling and young iguanas should be fed at least two times a day. Once the iguana is over 2 feet long, feedings can be done once daily. When the iguana has reached adulthood and maximum length, you can reduce feedings to every other day. Every iguana is different and may require more or less food.</p>
+
+  <p>Gestation period of animal
+
+    Incubation lasts from 90 to 120 days. Temperature should range from 85 to 91 degrees Fahrenheit. The hatchlings pip the egg open using a special egg tooth, called the caruncle, that falls off shortly after hatching. Absorbed yolk provides most of the nourishment for the first week or two of an iguana's life.
+
+
+
+    How many offspring does it typically have
+
+    The group of eggs that a female green iguana lays at one time is called a clutch. Each clutch they produce can hold between 20 and 71 eggs, with the average typically being around 40.
+
+
+
+    How long do they stay with their parents
+
+    They stay together during the first year of their life in family groups which offer protection against predators. Average lifespan of iguana is around 20 years in the wild.</p>
+
 </html>
